fixed bgm bug and json format